# BTKPython

./: CMakeLists.txt  README.md  btkPythonBinding.h
Code/: CMakeLists.txt  btkPythonBinding.cpp  btkPythonModule.cpp
Code/btkBase/: btkNode_pyq.cpp  btkNode_pyq.h  btk_python_init_btkBase.cpp
Code/btkIO/: btk_python_init_btkIO.cpp
Code/btkModel/: btk_python_init_btkModel.cpp
Code/btkTrial/: btk_python_init_btkTrial.cpp
Testing/: CMakeLists.txt  _TDD.py.in  _TDDBase.py  _TDDConfigure.py.in
Testing/Base/: NodeTest.py
