FIND_PACKAGE(PythonInterp REQUIRED)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/_TDD.py.in ${BTKPython_EXECUTABLE_PATH}/TDD.py)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/_TDDConfigure.py.in ${CMAKE_CURRENT_BINARY_DIR}/_TDDConfigure.py)

ADD_TEST(NAME "TDD_Python" WORKING_DIRECTORY ${BTKPython_EXECUTABLE_PATH} COMMAND ${PYTHON_EXECUTABLE} "TDD.py")